kube_files/services/graphql/migrations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-kompose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: hasura-migrations
  name: hasura-migrations
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hasura-migrations
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-kompose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: hasura-migrations
    spec:
      containers:
        - env:
            - name: HASURA_GRAPHQL_ADMIN_SECRET
              valueFrom:
                secretKeyRef:
                  name: secrets
                  key: HASURA_GRAPHQL_ADMIN_SECRET
            - name: HASURA_GRAPHQL_ENDPOINT
              valueFrom:
                secretKeyRef:
                  name: secrets
                  key: HASURA_GRAPHQL_ENDPOINT
          image: ghcr.io/0xintuition/hasura-migrations:latest
          name: hasura-migrations
      restartPolicy: Always
