kube_files/services/graphql/migrations-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-kompose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: hasura-migrations
  name: hasura-migrations
spec:
  serviceAccountName: secrets-access-sa
  containers:
    - env:
        - name: HASURA_GRAPHQL_ADMIN_SECRET
          valueFrom:
            secretKeyRef:
              name: aws-secrets
              key: HASURA_GRAPHQL_ADMIN_SECRET
        - name: HASURA_GRAPHQL_ENDPOINT
          valueFrom:
            secretKeyRef:
              name: aws-secrets
              key: HASURA_GRAPHQL_ENDPOINT
      image: ghcr.io/0xintuition/hasura-migrations:latest
      name: hasura-migrations
  restartPolicy: Never
