kube_files/services/graphql/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-engine-lb
  labels:
    io.kompose.service: graphql-engine
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    io.kompose.service: graphql-engine
