kube_files/services/graphql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-engine
  labels:
    io.kompose.service: graphql-engine
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8080
      protocol: TCP
  selector:
    io.kompose.service: graphql-engine
